--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ruihui Xu</title>
-  <meta name="description" content="Ruihui Xu — Personal website (EN/中文)." />
+  <meta name="description" content="Ruihui Xu personal website." />
   <style>
     body{
       margin:0;
@@ -54,8 +54,12 @@
   <main>
     <div class="langbar">
       <div class="langbtns" role="group" aria-label="Language switch">
-        <button class="btn" id="btn-en" type="button" aria-pressed="true">英文</button>
-        <button class="btn" id="btn-zh" type="button" aria-pressed="false">中文</button>
+        <button class="btn" id="btn-en" type="button" aria-pressed="true">
+          <span class="en">English</span><span class="zh">英文</span>
+        </button>
+        <button class="btn" id="btn-zh" type="button" aria-pressed="false">
+          <span class="en">Chinese</span><span class="zh">中文</span>
+        </button>
       </div>
     </div>
 
@@ -70,14 +74,6 @@
           <a class="en" href="https://github.com/ruihuixu2002" target="_blank" rel="noreferrer">GitHub</a>
           <a class="zh" href="https://github.com/ruihuixu2002" target="_blank" rel="noreferrer">代码</a>
         </div>
-      </div>
-
-      <div class="muted">
-        <span class="en">Atlanta, GA, USA</span>
-        <span class="zh">美国 · 佐治亚州 · 亚特兰大</span>
-        <br/>
-        <span class="en">English · Chinese</span>
-        <span class="zh">英语 · 中文</span>
       </div>
     </section>
 
@@ -111,12 +107,12 @@
           <span>B.S. in Mathematics</span>
           <span class="muted">Aug 2021 – Aug 2023</span>
         </div>
-        <div class="muted block">Honors: Summa Cum Laude, Liberal Studies Honors Program · GPA: 4.0</div>
+        <div class="muted block">Honors: Summa Cum Laude, Liberal Studies Honors Program, GPA: 4.0</div>
       </div>
 
       <div class="zh">
         <div class="row">
-          <strong>佐治亚理工学院 · 数学学院</strong>
+          <strong>佐治亚理工学院（数学学院）</strong>
           <span class="muted">亚特兰大，佐治亚州</span>
         </div>
         <div class="row block">
@@ -127,18 +123,23 @@
         <div style="height:12px"></div>
 
         <div class="row">
-          <strong>佛罗里达州立大学 · 文理学院</strong>
+          <strong>佛罗里达州立大学（文理学院）</strong>
           <span class="muted">塔拉哈西，佛罗里达州</span>
         </div>
         <div class="row block">
-          <span>精算学 学士</span>
+          <span>精算学学士</span>
           <span class="muted">2021.08 – 2023.08</span>
         </div>
         <div class="row block">
-          <span>数学 学士</span>
+          <span>数学学士</span>
           <span class="muted">2021.08 – 2023.08</span>
         </div>
-        <div class="muted block">荣誉：最优等（Summa Cum Laude），荣誉项目 · GPA：4.0</div>
+
+        <div class="muted block">
+          绩点：4.0<br/>
+          拉丁学位荣誉：最优等<br/>
+          通识教育荣誉项目
+        </div>
       </div>
     </section>
 
@@ -152,8 +153,8 @@
       </ul>
 
       <ul class="zh">
-        <li>SOA 考试 FM（金融数学）— 通过（2022.06）</li>
-        <li>SOA 考试 P（概率）— 通过（2022.07）</li>
+        <li>北美精算师协会（SOA）FM（金融数学），2022年6月通过</li>
+        <li>北美精算师协会（SOA）P（概率论），2022年7月通过</li>
       </ul>
     </section>
 
@@ -174,7 +175,7 @@
 
       <div class="zh">
         <div class="row">
-          <strong>研究生助教 · 佐治亚理工学院</strong>
+          <strong>佐治亚理工学院研究生助教</strong>
           <span class="muted">亚特兰大，佐治亚州</span>
         </div>
         <div class="row block">
@@ -195,7 +196,7 @@
       </ul>
 
       <ul class="zh">
-        <li>语言：英语；中文</li>
+        <li>语言：英语、中文</li>
         <li>编程：C++（入门），Python（入门）</li>
         <li>工具：Excel</li>
       </ul>
