--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <a class="zh" href="mailto:rxu367@gatech.edu">邮箱</a>
 
           <a class="en" href="https://github.com/ruihuixu2002" target="_blank" rel="noreferrer">GitHub</a>
-          <a class="zh" href="https://github.com/ruihuixu2002" target="_blank" rel="noreferrer">代码</a>
+          <a class="zh" href="https://github.com/ruihuixu2002" target="_blank" rel="noreferrer">GitHub</a>
         </div>
       </div>
     </section>
