--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <section class="top">
       <div>
-        <h1>Ruihui Xu</h1>
+        <h1 class="en">Ruihui Xu</h1>
+        <h1 class="zh">许睿辉</h1>
 
         <div class="links">
           <a class="en" href="mailto:rxu367@gatech.edu">Email</a>
@@ -107,7 +108,11 @@
           <span>B.S. in Mathematics</span>
           <span class="muted">Aug 2021 – Aug 2023</span>
         </div>
-        <div class="muted block">Honors: Summa Cum Laude, Liberal Studies Honors Program, GPA: 4.0</div>
+        <div class="muted block">
+          GPA: 4.0<br/>
+          Latin honors: Summa Cum Laude<br/>
+          Liberal Studies Honors Program
+        </div>
       </div>
 
       <div class="zh">
@@ -138,7 +143,7 @@
         <div class="muted block">
           绩点：4.0<br/>
           拉丁学位荣誉：最优等<br/>
-          通识教育荣誉项目
+          博雅教育荣誉项目
         </div>
       </div>
     </section>
