--- a/index.html
+++ b/index.html
@@ -12,14 +12,29 @@
       color:#111;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       line-height:1.7;
+      font-size:16px;
     }
     main{max-width:860px;margin:56px auto;padding:0 18px}
+
     a{color:#111;text-decoration:underline}
     a:hover{opacity:.75}
 
     h1{font-size:34px;margin:0 0 6px;letter-spacing:-.02em}
-    h2{font-size:13px;letter-spacing:.10em;text-transform:uppercase;margin:28px 0 10px}
-    h2.zh{letter-spacing:0;text-transform:none}
+
+    /* Bigger section headers */
+    h2{
+      font-size:16px;
+      letter-spacing:.06em;
+      text-transform:uppercase;
+      margin:30px 0 12px;
+      font-weight:700;
+    }
+    h2.zh{
+      font-size:17px;
+      letter-spacing:0;
+      text-transform:none;
+      font-weight:700;
+    }
 
     .muted{color:#555}
     .top{display:flex;justify-content:space-between;gap:18px;flex-wrap:wrap}
