--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
       <div class="zh">
         <div class="row">
-          <strong>佐治亚理工学院研究生助教</strong>
+          <strong>研究生助教（佐治亚理工学院）</strong>
           <span class="muted">亚特兰大，佐治亚州</span>
         </div>
         <div class="row block">
